--- a/JupyterNotebook/Main/EDA_HdTraffic_All.ipynb
+++ b/JupyterNotebook/Main/EDA_HdTraffic_All.ipynb
@@ -5,17 +5,24 @@
    "id": "617e5c79-8ef7-418e-80ea-797f83cc5219",
    "metadata": {},
    "source": [
-    "### Research Questions and machine learning objective \n",
-    "How does traffic intensity vary throughout the day?\n",
+    "# Intelligent Flow: Leveraging Machine Learning  for Urban Traffic Management\n",
     "\n",
-    "We will analyze the intensity of traffic at different times of the day to identify peak traffic hours. This involves aggregating traffic data by hour and visualizing the average traffic intensity.\n",
+    "## Project Objective and Goal:\n",
+    "The main goal is to leverage machine learning techniques to enhance urban traffic management in Heidelberg by predicting traffic intensity through various locations and times.\n",
     "\n",
-    "Does traffic intensity vary by vehicleType?\n",
-    "We aim to explore whether certain types of vehicles are more prevalent during specific times or in certain locations, contributing differently to overall traffic intensity.\n",
+    "## Research Question:\n",
+    "How can we accurately predict traffic intensity variations across different times and locations in Heidelberg using machine learning models?\n",
     "\n",
+    "## Machine Learning Aim:\n",
+    "To apply and evaluate SARIMAX and Prophet models on traffic data, tuned to predict daily, weekly, and business-day traffic intensities effectively, thereby assisting in better urban planning and congestion management.\n",
     "\n",
-    "Machine Learning Model:\n",
-    "Objective: Predict the traffic intensity based on time of day, location"
+    "## Dataset \n",
+    "Traffic cameras in the city of Heidelberg\n",
+    "The dataset contains an observation of the traffic flow at a specific place and time. It contains current and past measurements from traffic cameras in the city of Heidelberg (measurement interval: 15 min).\n",
+    "In addition to general location information, each dataset contains, if available, information on the number of vehicles and vehicle types measured, the average distance between vehicles and their passing time.\n",
+    "A detailed description of the dataset,the specification, and the raw data can be found here: \n",
+    "https://ckan.datenplattform.heidelberg.de/de/dataset/mobility_main_trafficcamera\n",
+    "<br>In the accuired traffic data the volume of traffic is represented as the count of the number of vehicles passing every 15 mins. "
    ]
   },
   {
